FIXED: dark mode borders, fixes #81 #84

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -82,10 +82,9 @@ button.small:hover{
 
 #root .singleView .sideview {
     width:calc(100% - 200px);
-    border-left: 1px solid rgb(189, 195, 199);
 }
 
-#root .dualView #view_0 {
+#root .sideview {
     border-left: 1px solid rgb(189, 195, 199);
 }
 
@@ -93,12 +92,16 @@ button.small:hover{
     border-color: transparent;
 }
 
-#root .darwin.dualView #view_1.active:before {
-    border-bottom-right-radius: 5px;
+#root .dualView #view_0.inactive {
+    border-right-color:transparent;
 }
 
-.bp3-dark #root .sideview {
-    border-left: 1px solid rgb(14,25,34);
+#root .dualView #view_1.inactive{
+    border-left-color: rgb(131, 135, 138);
+}
+
+#root .darwin.dualView #view_1.active:before {
+    border-bottom-right-radius: 5px;
 }
 
 #root .dualView .sideview:before{
@@ -110,7 +113,7 @@ button.small:hover{
     left: 0;
     content: "";
     opacity: .6;
-    z-index:99;
+    z-index: 9;
     border: 1px solid rgb(189, 195, 199);
     border-top:none;
     border-bottom:none;
@@ -125,34 +128,30 @@ button.small:hover{
     border-left:none;
 }
 
-/* #root .sideview:before{
-    box-shadow: 0 0 2px 2px inset rgb(231, 236, 239);
+/* dark theme */
+.bp3-dark #root .singleView .sideview {
+    border-left: 1px solid rgb(14,25,34);
 }
 
-.bp3-dark #root .sideview:before{
-    box-shadow: 0 0 2px 2px inset rgb(66, 84, 97);
+.bp3-dark #root .sideview,
+.bp3-dark #root .dualView #view_1.inactive {
+    border-color: rgb(14,25,34);
 }
 
-#root .sideview.active:before{
-    box-shadow: 0 0 0px 2px inset rgba(19, 124, 189, 0.8);
-    z-index:2;
-    pointer-events: none;
+.bp3-dark #root .dualView .sideview.inactive:before {
+    border-color: rgb(73, 75, 76);
 }
 
-#root .singleView .sideview.active:before{
-    box-shadow: 0 0 2px 2px inset rgb(219, 219, 219);
-}
-
-.bp3-dark #root .singleView .sideview:before{
-    box-shadow: 0 0 2px 2px inset rgb(66, 84, 97);
-} */
-
-#root .sideview.dropTarget:before{
-    box-shadow: 0 0 4px 2px inset #00b63d82;
+#root .sideview.dropTarget:before {
+    box-shadow: 0 0 4px 2px inset #00b63ddb;
 }
 
 #root .sideview.notDropTarget{
     cursor:no-drop;
+}
+
+#root .sideview.notDropTarget:before {
+    box-shadow: 0 0 4px 2px inset #b6000982;
 }
 
 #root .sideview:first-child{
